--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Aqui iria el titulo de la pagina</h1>
     <p>Essto es un parrafo</p>
+    <p>Esto es un segundo párrafo</p>
     
 </body>
 </html>
