--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <style href="miEstilo.css">
+<link rel="stylesheet" type="text/css" href="css/miEstilo.css">
+
 <body>
     <h1>Aqui iria el titulo de la pagina</h1>
     <p>Essto es un parrafo</p>
