--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Proyecto C</title>
 
 <link rel="stylesheet" type="text/css" href="css/miEstilo.css">
+
 </head>
 <body>
     
